test: add test null input returing exception for aicPaginatedResponseMapper